# notes-backend

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  build-run.sh  database.py  main.py  models.py  pyproject.toml
app/: config.py  conftest.py  crud.py  database.py  main.py  security.py  startup.py  test_config.py  typedefs.py
app/api/: deps.py  main.py
app/api/routes/: constants.py  folders.py  login.py  notes.py  tags.py  users.py
app/api/schemas/: folders.py  notes.py  tags.py  tokens.py  users.py
app/api/tests/: test_folder_endpoints.py  test_note_endpoints.py  test_tag_endpoints.py
app/models/: basemodels.py  folders.py  notes.py  tables.py  tags.py
app/models/tests/: factories.py  test_factories.py
app/schemas/: notes.py
app/shared/: constants.py
tests/: conftest.py  constants.py  factories.py  typedefs.py  utils.py
tests/api/: test_folder_endpoints.py  test_login_endpoints.py  test_note_endpoints.py  test_tag_endpoints.py  test_user_endpoints.py
tests/models/: factories.py  test_factories.py
