[project]
name = "notes-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "mypy>=1.16.1",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "basedpyright>=1.29.5",
    "ruff>=0.12.2",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# select = ["E4", "E7", "E9", "F", "FAST", "RUF", "PL", "ANN"]
select = ["ALL"]
ignore = [
  "ANN401",	# allow any typing, needed for endpoints
  "D100", 	# allow modules without docstrings
  "D104",	# allow packages without docstrings
  "D203",	# incompatible
  "D212",
  "D213",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
