[project]
name = "notes-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "basedpyright>=1.29.5",
    "factory-boy>=3.3.3",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-factoryboy>=2.8.1",
    "ruff>=0.12.2",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",	# allow any typing, needed for endpoints
  "D100", 	# allow modules without docstrings
  "D104",	# allow packages without docstrings
  "D203",	# incompatible
  "D212",
  "D213",
  "D106"
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Per-file rule exclusions
[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "D103", "D106", "D101"]


[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
files = ["app/"]

